Roles still not working but the web filter chain does.